{
    "name": "InputMap",
    "maps": [
        {
            "name": "Keys",
            "id": "0a1cb9a6-65dc-4d05-8c60-8c7af5ba2eda",
            "actions": [
                {
                    "name": "CameraAxis",
                    "type": "Value",
                    "id": "e67f84c4-5ac9-4807-b120-944b43dc3b98",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveAxis",
                    "type": "Value",
                    "id": "8b150c0d-863e-495a-a4e3-cb811cbfaabb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "67fee4e2-65f5-43c4-a76e-f5f979562246",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "735ef45b-b3ee-4b0f-abb7-6b66abbf077b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "bd64554b-528a-4bd8-bbb3-e04f82037f37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Turn",
                    "type": "Value",
                    "id": "0f966f47-4a76-4d61-b397-26829d08400c",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FireAuto",
                    "type": "Button",
                    "id": "3aa5d608-5d84-4bef-85dd-1bb961fcb3a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireTap",
                    "type": "Button",
                    "id": "5d4a9dad-8b31-4975-a669-2e458815707c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "13bd2753-bd88-4f28-84b0-f527c4a4ff27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "a5c1b9a2-fc54-443e-b278-2f6f7627e82b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                },
                {
                    "name": "NightVision",
                    "type": "Button",
                    "id": "3958c0d6-5c71-4aa4-8fd9-ea70d93df26d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                },
                {
                    "name": "FreeVision",
                    "type": "Button",
                    "id": "f5d6d683-ac12-4e97-8e0c-d7c109a4cbde",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Flashlight",
                    "type": "Button",
                    "id": "472f1a35-4de5-482a-8257-75611aaa3d73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                },
                {
                    "name": "Laser",
                    "type": "Button",
                    "id": "e224c223-efea-4d55-b2bb-1dad95351a64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "968abc51-a4fa-4cd2-8166-4c3fdea91b2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                },
                {
                    "name": "Inspect",
                    "type": "Button",
                    "id": "4eb0d930-1f6c-4535-9cd0-4b756c712d7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                },
                {
                    "name": "Custom",
                    "type": "Button",
                    "id": "f0981c42-8ca3-4a5d-9e1b-2d339dd7af66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipPrimary",
                    "type": "Button",
                    "id": "bde2314d-5999-432c-88b0-34ddd87162aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipSecondary",
                    "type": "Button",
                    "id": "234b889d-e010-43cb-a7f4-76aea212868a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.005)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "939f788c-dd3f-46e6-8c8b-b6b1b16a4f76",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ef0fdd3-b758-4a2c-9e12-dfcf1e0ad5a5",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "967eec24-a5dc-4136-8540-a6f4b13b2971",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "PC",
                    "id": "7884947c-51a1-44c4-b3bb-bd576bd1b75b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "68ee0bc5-0bb9-4a84-afd7-9fefb0229d89",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2b1e3587-bdfb-4b69-8a66-fcf3e6f24f5e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "25eeaa4d-34ef-4dda-8dca-3e72c5ab6554",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ffa9d271-0986-4231-9725-e0cb5d1f7ac9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7db02d2d-d737-4151-bbed-29dc09df62f6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireAuto",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6be8792-be84-4372-a563-c079cd2938a3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85e09bc6-0e73-4285-88ad-92fb431692d6",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf744a02-7987-48b9-9f0d-baeef1464715",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c79b050-20b0-4e9b-ac27-dcfcd9f4baa6",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NightVision",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bd9b190-fb6e-4c2d-9f08-cb94525d556f",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flashlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6465f0ec-460e-4584-a555-53d0418f0175",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "406093db-521c-4c9d-af6b-d06660b5577d",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Laser",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "179ecae7-02a4-4b9d-8862-f11d6e0350d5",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfd9a753-afbe-40eb-8adb-1c9810b52a66",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EquipSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d21cf65d-ff94-4120-9650-0ba7c93f4569",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "PC",
                    "id": "708aba3c-b78d-44cd-8042-bd8bae7c70ed",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4e8dd702-5f06-437d-9f5a-4d2424dd58d2",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "38c78594-127a-4cb2-af5d-70d3f0cfc7dd",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5ae6b64c-8715-47e4-b1c2-bdad0b24d290",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Custom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25267f31-b448-4bff-ac73-7cab5917bffb",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inspect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55f0a67e-5333-4d3b-8bfc-a0ab9c7b213d",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreeVision",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}